--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/<dbname>?retryWrites=true&w=majority
-JWT_SECRET=replace_with_a_long_random_string
+JWT_SECRET=
 PORT=3000
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
